k8s/base/drone/runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-kube
  namespace: private
  labels:
    app: drone-runner-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner-kube
  template:
    metadata:
      labels:
        app: drone-runner-kube
    spec:
      serviceAccountName: drone-runner
      containers:
        - name: drone-runner-kube
          image: drone/drone-runner-kube:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
