k8s/base/drone/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: private
  labels:
    app: drone-server
spec:
  selector:
    app: drone-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
