k8s/base/drone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
  namespace: private
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: private-tailscale-only@kubernetescrd
spec:
  rules:
    - host: ci.ostbye.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone
                port:
                  number: 80
  tls:
    - hosts:
        - ci.ostbye.dev
      secretName: drone-tls
